# tecnica-de-desenvolvimento-de-algoritimo-udf

./: .clangd  .gitignore  LICENSE  README.md  flake.nix  meson.build
ch01/: main.cpp
ex03/: main.cpp
ex04/: main.cpp
ex05/: main.cpp
list0/ex01/: main.cpp
list0/ex02/: main.cpp
list1/ex01/: main.cpp
list1/ex02/: main.cpp
list1/ex03/: main.cpp
list1/ex04/: main.cpp
list1/ex05/: main.cpp
list1/ex06/: main.cpp
list1/ex07/: main.cpp
list1/ex08/: main.cpp
list1/ex09/: main.cpp
list1/ex10/: main.cpp
list1/ex11/: main.cpp
list1/ex12/: main.cpp
list1/ex13/: main.cpp
list1/ex14/: main.cpp
list1/ex15/: main.cpp
list1/ex16/: main.cpp
list2/ex01/: main.cpp
list2/ex02/: main.cpp
list2/ex03/: main.cpp
list2/ex04/: main.cpp
list2/ex05/: main.cpp
list2/ex06/: main.cpp
list2/ex07/: main.cpp
list2/ex08/: main.cpp
list2/ex09/: main.cpp
list2/ex10/: main.cpp
list2/ex11/: main.cpp
list2/ex12/: main.cpp
list2/ex13/: main.cpp
list2/ex14/: main.cpp
list3/ex01/: main.cpp
list3/ex02/: main.cpp
list3/ex03/: main.cpp
list3/ex04/: main.cpp
list3/ex05/: main.cpp
list3/ex06/: main.cpp
list3/ex07/: main.cpp
list3/ex08/: main.cpp
list3/ex15/: main.cpp
